atualização html classes

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div></div>
         <div></div>
         <div></div>
-        <div></div>
-        <div></div>
+        <div class="azul"></div>
+        <div class="amarelo"></div>
     </main>
     
 </body>
